[project]
name = "jsonlt-rust-dev"
version = "0.0.0"
description = "Development dependencies for jsonlt-rust."
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
  "basedpyright>=1.36.1",
  "codespell>=2.4.1",
  "prek>=0.2.23",
  "vale>=3.13.0.0",
  "yamllint>=1.37.1",
]
release = ["cyclonedx-bom>=7.2.1"]

[tool.codespell]
skip = "coverage.xml,coverage.json,uv.lock,pnpm-lock.yaml,tmp,dist,target,node_modules,*.cdx.json"
ignore-words-list = "AKS,CrossReference,Nd,Wont,WONT"
